# circuit-discovery-toy-task

./: .env.example  .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-cpu.txt  requirements.txt  setup.ps1  setup.sh  sitemap.xml
.github/workflows/: ci.yml
appendix/: index.html
background/: index.html
circuit_analysis/: index.html
configs/analysis/: default.yaml  small.yaml
configs/patching/: default.yaml  small.yaml
configs/training/: default.yaml  fast-debug.yaml  small.yaml
discussion/: index.html
docker/: Dockerfile
docs/: appendix.md  background.md  circuit_analysis.md  discussion.md  fourier_analysis.md  index.md  macros.py  methods.md  minimal_circuit.md  reproduce.md  writeup.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
fourier_analysis/: index.html
methods/: index.html
minimal_circuit/: index.html
notebooks/: colab_demo.ipynb
reproduce/: index.html
scripts/: run_full_pipeline.sh
search/: search_index.json
src/analysis/: attention_patterns.py  attention_variation.py  direct_logit_attribution.py  embedding_analysis.py  fourier.py  grokking_dynamics.py  head_roles.py  logit_fourier.py  logit_lens.py  minimal_circuit.py  neuron_analysis.py  weight_analysis.py
src/data/: __init__.py  modular_addition.py  visualize_dataset.py
src/patching/: head_patch.py  mlp_patch.py  patcher.py  path_patch.py  residual_stream_patch.py
src/training/: train.py
src/utils/: config.py
tests/: test_config.py  test_data.py
writeup/: index.html
